# posit-rust

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench.rs  microbench.rs
benches/vs_external/: berkeley_softfloat.rs  cerlane_softposit.rs  main.rs  stillwater_softposit.rs
proptest-regressions/posit/: add.txt  decode.txt  div.txt  encode.txt  mul.txt  round_int.txt
proptest-regressions/posit/convert/: float.txt  int.txt  posit.txt
proptest-regressions/posit/math/: sqrt.txt
proptest-regressions/posit/ops/: add.txt  div.txt  mul.txt
proptest-regressions/posit/quire/: convert.txt  ops.txt
src/: bench.rs  lib.rs  underlying.rs  utl.rs
src/posit/: add.rs  basics.rs  consts.rs  decode.rs  encode.rs  fmt.rs  mod.rs  mul.rs  rational.rs  round_int.rs  test.rs  traits.rs  unary.rs
src/posit/convert/: float.rs  int.rs  mod.rs  posit.rs
src/posit/math/: mod.rs  sqrt.rs
src/posit/ops/: add.rs  div.rs  mod.rs  mul.rs
src/posit/quire/: accumulate.rs  add.rs  basics.rs  convert.rs  mod.rs  ops.rs
src/underlying/: const_as.rs  double.rs  int.rs  mod.rs  unsigned.rs
