[package]
name = "fast-posit"
version = "0.1.1"
edition = "2024"
description = "Software implementation of the Posit floating point format"
documentation = "https://docs.rs/fast-posit"
repository = "https://github.com/andrepd/posit-rust"
keywords = ["float", "arithmetic", "posit", "unum"]
categories = ["algorithms", "mathematics", "no-std", "no-std::no-alloc"]
license = "LGPL-3.0"

[dev-dependencies]
proptest = "1.6.0"
criterion = "0.5.1"
malachite = "0.6.1"
libc = "0.2.174"
rand = "0.9.2"

[[bench]]
name = "microbench"
harness = false
required-features = ["bench"]

[[bench]]
name = "vs_external"
harness = false
required-features = ["bench"]

[features]
bench = []

cerlane-softposit = []
berkeley-softfloat = []
stillwater-softposit = []
